{
    "name": "GlobalMapInputController",
    "maps": [
        {
            "name": "MapActions",
            "id": "a4c79f2b-e227-41f3-8ee6-e72095875532",
            "actions": [
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "be68d0ee-eca0-4780-9672-27dbec903f91",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Drag",
                    "type": "Button",
                    "id": "2f7de1a7-a954-4b65-92bd-81f166f4d7f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "762ec6ab-d5d8-4ddf-b2d1-a0b96f8b20e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold,Tap(pressPoint=0.2),Press(pressPoint=0.1)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eea49a4b-e5c4-447f-bbf9-af4769268592",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0661d8f-1d1a-40f2-91cb-87e1a260115e",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchpad",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Touch",
                    "id": "db2b4203-21a9-45e3-ae61-f3e098274d07",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drag",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "b3711cd3-e79e-4e1d-ac97-784324814584",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "TouchPad",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "ad133f59-33e3-4a0a-bd98-0aae3938d261",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "TouchPad",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Mouse",
                    "id": "d2e1b12b-0e61-4771-a49e-14b6b23b1f3f",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drag",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "9c5caae6-a6e6-4cf2-baef-9f09046f1d30",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "bf6864b0-2105-4779-b2f5-fe58c563c890",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Touch",
                    "id": "7f9b57e9-ce28-4395-a69c-081d8a5fba62",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "f6776558-b283-42c0-9736-540392054e0d",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "TouchPad",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "72c79130-be3d-4aec-8a74-5c7d09e428c0",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "TouchPad",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Mouse",
                    "id": "b6998c97-5511-455c-9b89-2eec578ff599",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "24320ce6-1a37-4871-bc30-6bf3a0f57456",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "00c2928b-103d-467c-bb60-41d315dbe86b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "MoveZoom",
            "id": "aed05207-2afa-42c0-93f6-9cc036ac0d22",
            "actions": [
                {
                    "name": "ZoomTouch1",
                    "type": "Value",
                    "id": "04ab8341-64c7-4e91-b8ca-0cc481d55013",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ZoomTouch2",
                    "type": "Value",
                    "id": "751559e3-8757-447c-befb-cf4c9002833b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ZoomTouchContact",
                    "type": "Button",
                    "id": "bb97ff72-039d-4ad5-9ee4-f1ecbed1ec84",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseWheel",
                    "type": "Value",
                    "id": "cd338ef8-bfb0-4191-96b6-d5d3ab06b396",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b8b9f400-0066-4b34-a201-3d571723764e",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomTouch1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0dff7b23-e096-441e-a09d-5e5dbd9e86f6",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomTouch2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bad8f2d6-8903-422d-8c7c-1b4b91c80342",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "TouchPad",
                    "action": "ZoomTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f550fd5e-52d4-4851-a1f5-493a1f10ed6b",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "MouseWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "TouchPad",
            "bindingGroup": "TouchPad",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}